--- a/Css/minuteur.css
+++ b/Css/minuteur.css
@@ -16,6 +16,7 @@ body {
     align-items: center;
     min-height: 100vh;
     background: #2f4f4f;
+    flex-direction: column;
 }
 
 body::before {
@@ -92,10 +93,69 @@ body::after {
 }
 
 .unite {
-    padding: 5px ;
+    padding: 5px;
     background-color: #0a0a0a;
     font-size: 15px;
     text-align: center;
+}
+
+form {
+    z-index: 10;
+    margin-top: 15px;
+}
+
+form span {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+form span label {
+    font-size: 50px;
+    font-family: "monfont", cursive;
+}
+
+input {
+    background: none;
+    outline: none;
+    height: 40px;
+    width: 250px;
+    font-size: 20px;
+    border-radius: 10px;
+    font-family: "monfont", cursive;
+    text-align: center;
+}
+
+form div {
+    margin-top: 20px;
+    text-align: center;
+}
+
+button {
+    background: none;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: inset 4px 4px 5px rgba(255, 255, 255, 0.4),
+        inset -4px -4px 5px rgba(0, 0, 0, 0.2),
+        10px 40px 40px rgba(0, 0, 0, 0.4);
+    transition: 0.2s;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #1b1b1b;
+    transition: 0.2s;
+}
+
+button img {
+    max-height: 100%;
+    max-width: 100%;
 }
 
 @media only screen and (min-width : 500px) {
@@ -103,21 +163,21 @@ body::after {
     #title {
         font-size: 50px;
     }
-    
+
     #minuteur {
         grid-template-columns: repeat(4, 100px);
         gap: 10px;
         margin: 5vh auto;
     }
-    
+
     .box {
         height: 120px;
     }
-    
+
     .box>div:first-child {
         font-size: 80px;
     }
- 
+
 }
 
 
@@ -125,26 +185,26 @@ body::after {
     #title {
         font-size: 80px;
     }
-    
+
     #minuteur {
         grid-template-columns: repeat(4, 170px);
     }
-    
+
     .box {
         height: 180px;
     }
-    
+
     .box>div:first-child {
         font-size: 120px;
     }
- 
+
 }
 
 
 
 @media only screen and (min-width : 1060px) {
 
-   
+
     #wrapper {
         padding: 40px 80px;
     }
