--- a/Css/minuteur.css
+++ b/Css/minuteur.css
@@ -56,19 +56,19 @@ body::after {
         inset -4px -4px 5px rgba(0, 0, 0, 0.2),
         10px 40px 40px rgba(0, 0, 0, 0.4);
 
-    padding: 10px 20px;
+    padding: 10px 10px;
     border-radius: 10px;
     z-index: 10;
 }
 
 #title {
-    font-size: 45px;
+    font-size: 35px;
     font-family: "monfont", cursive;
 }
 
 #minuteur {
     display: grid;
-    grid-template-columns: repeat(4, 75px);
+    grid-template-columns: repeat(5, 65px);
     gap: 5px;
     margin: 4vh auto;
     color: #fff;
@@ -76,7 +76,7 @@ body::after {
 }
 
 .box {
-    height: 70px;
+    height: 80px;
     text-align: center;
     background-color: #1b1b1b;
     border-radius: 10px;
@@ -85,7 +85,7 @@ body::after {
 }
 
 .box>div:first-child {
-    font-size: 50px;
+    font-size: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -95,13 +95,13 @@ body::after {
 .unite {
     padding: 5px;
     background-color: #0a0a0a;
-    font-size: 15px;
+    font-size: 10px;
     text-align: center;
 }
 
 form {
     z-index: 10;
-    margin-top: 15px;
+    margin-top: 25px;
 }
 
 form span {
@@ -112,8 +112,9 @@ form span {
 }
 
 form span label {
-    font-size: 50px;
+    font-size: 30px;
     font-family: "monfont", cursive;
+    margin-bottom: 10px;
 }
 
 input {
@@ -125,6 +126,7 @@ input {
     border-radius: 10px;
     font-family: "monfont", cursive;
     text-align: center;
+    margin: 10px;
 }
 
 form div {
@@ -165,17 +167,20 @@ button img {
     }
 
     #minuteur {
-        grid-template-columns: repeat(4, 100px);
+        grid-template-columns: repeat(5, 90px);
         gap: 10px;
         margin: 5vh auto;
     }
 
     .box {
-        height: 120px;
+        height: 100px;
     }
 
     .box>div:first-child {
-        font-size: 80px;
+        font-size: 55px;
+    }
+    .unite {
+        font-size: 15px;
     }
 
 }
@@ -187,15 +192,19 @@ button img {
     }
 
     #minuteur {
-        grid-template-columns: repeat(4, 170px);
+        grid-template-columns: repeat(5, 140px);
     }
 
     .box {
-        height: 180px;
+        height: 155px;
     }
 
     .box>div:first-child {
-        font-size: 120px;
+        font-size: 90px;
+    }
+
+    .unite {
+        font-size: 20px;
     }
 
 }
@@ -206,32 +215,33 @@ button img {
 
 
     #wrapper {
-        padding: 40px 80px;
+        padding: 10px 20px;
     }
 
 
     #title {
         font-size: 60px;
+        margin: 2vh auto;
     }
 
     #minuteur {
-        grid-template-columns: repeat(4, 200px);
+        grid-template-columns: repeat(5, 180px);
         gap: 25px;
         margin: 10vh auto;
     }
 
     .box {
-        height: 200px;
+        height: 210px;
     }
 
     .box>div:first-child {
-        font-size: 130px;
+        font-size: 105px;
         padding: 20px;
     }
 
     .unite {
         padding: 10px 20px;
-        font-size: 20px;
+        font-size: 25px;
     }
 
 }
