--- a/Css/chronometre.css
+++ b/Css/chronometre.css
@@ -56,6 +56,7 @@ main {
     z-index: 10;
     border-radius: 10px;
     padding-bottom: 20px;
+    position: relative;
 
 }
 
@@ -116,6 +117,7 @@ main {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .button {
@@ -130,7 +132,7 @@ main {
     box-shadow: inset 4px 4px 5px rgba(255, 255, 255, 0.4),
         inset -4px -4px 5px rgba(0, 0, 0, 0.2),
         10px 40px 40px rgba(0, 0, 0, 0.4);
-    transition: 0.2s;
+    transition: 0.4s;
     cursor: pointer;
     margin: 10px;
     color: #fff;
@@ -140,15 +142,14 @@ main {
 }
 
 .button:hover {
-    background-color: #1b1b1b;
-    color: #fff;
+   opacity: 0.7;
     transition: 0.2s;
 }
 
-.button:focus {
+.button:active {
     background-color: #1b1b1b;
     color: #fff;
-    transition: 0.2s;
+    transition: 0.4s;
 }
 
 
@@ -163,21 +164,14 @@ main {
 }
 
 .laps {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 60%;
-    max-height: 250px;
+    width: 340px;
+    max-height: 200px;
    overflow-y: auto;
     color: #fff;
-    padding: 15px;
+    padding-bottom: 55px;
     list-style: none;
     border-top: 1px solid rgba(255, 255, 255, 0.2);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    /* box-shadow: inset 4px 4px 5px rgba(255, 255, 255, 0.4),
-        inset -4px -4px 5px rgba(0, 0, 0, 0.2),
-        10px 40px 40px rgba(0, 0, 0, 0.4); */
     border-radius: 10px;
 }
 
@@ -190,10 +184,10 @@ main {
 .lap-item {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     width: 100%;
-    height: 30px;
-    padding: 5px;
+    height: 40px;
+    padding: 10px;
     text-align: center;
     border: 1px solid #444;
     border-radius: 50px;
@@ -204,27 +198,40 @@ main {
     font-size: 20px;
 }
 
+
+.number, .time-stamp{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .lap-clear {
+    position: absolute;
+    bottom: 20px;
     border: none;
     background-color: transparent;
-    padding: 0 4px;
-    border: 1px solid white;
-    border-radius: 10px;
+    width: 200px;
+    height:60px;
+    border-radius: 50px;
     transition: 0.2s;
     cursor: pointer;
-    margin: 10px;
     color: #fff;
     text-shadow: 1px 1px 2px black;
-    background-color: rgba(236, 0, 0, 0.397);
+    background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(8px);
     font-family: "monfont", cursive;
     font-size: 20px;
 }
 
 .lap-clear:hover {
-    background-color: #1b1b1b;
+    background-color: #00000080;
     color: #fff;
     transition: 0.2s;
+}
+
+.hidden{
+    visibility: hidden;
 }
 
 
