--- a/Css/chronometre.css
+++ b/Css/chronometre.css
@@ -13,9 +13,9 @@
 
 body {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    min-height: 100vh;
+    height: 100vh;
     background: #2f4f4f;
     flex-direction: column;
 }
@@ -142,7 +142,7 @@ main {
 }
 
 .button:hover {
-   opacity: 0.7;
+    opacity: 0.7;
     transition: 0.2s;
 }
 
@@ -166,7 +166,7 @@ main {
 .laps {
     width: 340px;
     max-height: 200px;
-   overflow-y: auto;
+    overflow-y: auto;
     color: #fff;
     padding-bottom: 55px;
     list-style: none;
@@ -199,8 +199,9 @@ main {
 }
 
 
-.number, .time-stamp{
-    display:flex;
+.number,
+.time-stamp {
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -212,7 +213,7 @@ main {
     border: none;
     background-color: transparent;
     width: 200px;
-    height:60px;
+    height: 60px;
     border-radius: 50px;
     transition: 0.2s;
     cursor: pointer;
@@ -230,8 +231,43 @@ main {
     transition: 0.2s;
 }
 
-.hidden{
+.hidden {
     visibility: hidden;
+}
+
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    height: 10%;
+    width: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.4)
+}
+
+footer ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    width: 100%;
+    height: 100%;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(15px);
+}
+
+footer ul li a {
+    font-weight: 800;
+    text-decoration: none;
+    color: #fdfdfdda;
+    text-shadow: 1px 1px #000000;
+    transition: 0.4s;
+}
+
+footer ul li a:hover {
+    color: #000000;
+    transition: 0.4s;
 }
 
 
