--- a/Css/reveil.css
+++ b/Css/reveil.css
@@ -12,9 +12,9 @@
 
 body {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    min-height: 100vh;
+    height: 100vh;
     background: #2f4f4f;
     flex-direction: column;
 }
@@ -55,6 +55,13 @@ main {
 
 }
 
+#messageAlarm{
+   background: rgba(255, 255, 255, 0.4);
+    border-radius: 20px;
+    text-align: center;
+
+}
+
 section {
     display: flex;
     justify-content: space-around;
@@ -65,7 +72,7 @@ section {
 }
 
 section img {
-    height: 40px;
+    height: 60px;
 }
 
 section div {
@@ -90,16 +97,29 @@ form div {
     margin: 5px 0;
 }
 
+
+#date{
+  outline: none;
+  border:none;
+  border-radius:4px;
+  background:transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  border-left: 1px solid rgba(255, 255, 255, 0.2);
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
+  color:rgba(255, 255, 255, 0.418);
+  padding:0 4px;
+}
+
 #message{
 width: 90%;
-height:40px;
+height:30px;
 margin: 5px 0;
 outline: none;
 border: none;
 border-radius: 5px;
 background:rgba(0, 0, 0, 0.692);
 color: rgba(255, 255, 255, 0.685);
-font-size: 20px;
+font-size: 15px;
 text-align: center;
 }
 
@@ -118,26 +138,35 @@ p {
     color: rgba(0, 0, 0, 0.692);
 }
 
-ul {
+main ul {
     margin-top: 5px;
     text-align: center;
     max-height: 250px;
     overflow-y: auto;
 }
 
-ul::-webkit-scrollbar {
+main ul::-webkit-scrollbar {
     display: none;
 }
 
-ul li {
+main ul li {
     list-style: none;
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    color: #fff;
     width: 100%;
-    font-size: 25px;
+    font-size: 15px;
     background: rgba(0, 0, 0, 0.4);
     padding: 5px 0;
     margin: 5px 0;
+}
+
+#hours,#minutes,#seconds{
+    background: rgba(0, 0, 0, 0.986);  
+    border-radius: 5px;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    padding:4px;
 }
 
 .set-alarm,
@@ -147,19 +176,80 @@ ul li {
     background: none;
     width: 80px;
     height: 30px;
-    font-size: 20px;
+    font-size: 15px;
+    font-weight: 700;
     border-radius: 10px;
-    color: rgba(255, 255, 255, 0.452);
+    color:rgba(255, 255, 255, 0.61);
     background: rgba(0, 0, 0, 0.4);
     border-bottom: 1px solid rgba(255, 255, 255, 0.568);
-
 }
 
-ul em {
+.set-alarm{
+background:rgba(23, 86, 221, 0.795);
+}
+.set-alarm:hover{
+    background:rgba(23, 86, 221, 0.623);  
+}
+
+
+.clear-alarm {
+    background:rgba(221, 36, 23, 0.712);
+}
+.clear-alarm:hover {
+    background:rgba(221, 36, 23, 0.582);
+}
+
+
+
+main ul em {
     padding-top: 10px;
     color: #fff;
 }
 
 .deleteAlarm{
-    
+border:1px solid rgba(255, 255, 255, 0.4);
+background-color: rgba(255, 0, 0, 0.514);
+color:rgba(255, 255, 255, 0.418);
+padding:4px;
+border-radius: 5px;
+transition: 0.4s;
 }
+
+.deleteAlarm:hover{
+    background-color: rgba(255, 0, 0, 0.336);
+    transition: 0.4s;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+    height:10%;
+    width: 100%;
+    border: 1px solid rgba(255, 255, 255, 0.4)
+}
+
+footer ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    width:100%;
+    height: 100%;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(15px);
+}
+
+footer ul li a{
+  font-weight: 800;
+  text-decoration: none;
+  color:#fdfdfdda;
+  text-shadow:1px 1px #000000;
+  transition: 0.4s;
+}
+
+footer ul li a:hover{
+   color:#000000;
+   transition: 0.4s;
+  }
