--- a/Css/minuteur.css
+++ b/Css/minuteur.css
@@ -275,19 +275,19 @@ footer ul li a:hover {
 
 
     #wrapper {
-        padding: 10px 20px;
+        padding: 5px 10px;
     }
 
 
     #title {
-        font-size: 60px;
-        margin: 1vh auto;
+        font-size: 50px;
+        margin: 5px;
     }
 
     #minuteur {
         grid-template-columns: repeat(5, 180px);
         gap: 25px;
-        margin: 5vh auto;
+        margin: 5px auto;
     }
 
     .box {
@@ -300,7 +300,7 @@ footer ul li a:hover {
     }
 
     .unite {
-        padding: 10px 20px;
+        padding: 10px 10px;
         font-size: 25px;
     }
 
