--- a/Css/reveil.css
+++ b/Css/reveil.css
@@ -253,3 +253,9 @@ footer ul li a:hover{
    color:#000000;
    transition: 0.4s;
   }
+
+  @media only screen and (min-width : 500px) {
+ main{
+     width:450px;
+ }
+}
